Set up book template

--- a/src/main.tex
+++ b/src/main.tex
@@ -2,15 +2,20 @@
 %! Date = 1/27/25
 
 % Preamble
-\documentclass[11pt]{article}
+\documentclass[11pt]{book}
 
 % Packages
 \usepackage{amsmath}
 
 % Document
 \begin{document}
+	\title{Hitchhiker's Guide to China}
+	\author{Miasoedov Artemii \\ Brayko Timofey}
 
-	Hello, World!
+	\maketitle
+	\tableofcontents
+
+	\input{01/chapter}
 
 	\bibliography{main}
 	\bibliographystyle{plain}
