--- a/src/main.tex
+++ b/src/main.tex
@@ -15,10 +15,10 @@
 	\maketitle
 	\tableofcontents
 
-	\part[Russia]{Russia}\label{part:russia}
+	\part[Russia]{Russia}\label{part:ru}
 	\input{russia/01_chapter}
 
-	\part[China]{China}\label{part:china}
+	\part[China]{China}\label{part:cn}
 	\input{china/01_chapter}
 
 	\bibliography{main}
