Added 11pt and twocolumn to the template

--- a/src/main.tex
+++ b/src/main.tex
@@ -2,7 +2,7 @@
 %! Date = 1/27/25
 
 % Preamble
-\documentclass[openany]{book}
+\documentclass[11pt,openany,twocolumn]{book}
 
 % Packages
 \usepackage{amsmath}
