Renamed the part folders

--- a/src/main.tex
+++ b/src/main.tex
@@ -16,10 +16,10 @@
 	\tableofcontents
 
 	\part[Russia]{Russia}\label{part:ru}
-	\input{russia/01_chapter}
+	\input{01_russia/01_chapter}
 
 	\part[China]{China}\label{part:cn}
-	\input{china/01_chapter}
+	\input{02_china/01_chapter}
 
 	\bibliography{main}
 	\bibliographystyle{plain}
