Started chapter: BIT application (half the way)

--- a/src/main.tex
+++ b/src/main.tex
@@ -2,10 +2,16 @@
 %! Date = 1/27/25
 
 % Preamble
-\documentclass[11pt,openany,twocolumn]{book}
+\documentclass[11pt,openany]{book}
 
 % Packages
 \usepackage{amsmath}
+\usepackage{hyperref}
+\usepackage{tcolorbox}
+\usepackage{graphicx}
+\usepackage{float}
+%\usepackage{subfig}
+\usepackage{subcaption}
 
 % Document
 \begin{document}
