Added a section about roaming

--- a/src/main.tex
+++ b/src/main.tex
@@ -2,10 +2,14 @@
 %! Date = 1/27/25
 
 % Preamble
-\documentclass[11pt,openany,twocolumn]{book}
+\documentclass[11pt,openany]{book}
 
 % Packages
 \usepackage{amsmath}
+\usepackage{graphicx}
+\usepackage{textcomp}
+\usepackage{siunitx}
+\usepackage{float}
 
 % Document
 \begin{document}
@@ -19,7 +23,7 @@
 	\input{01_russia/01_chapter}
 
 	\part[China]{China}\label{part:cn}
-	\input{02_china/01_chapter}
+	\input{02_china/01_arrival}
 
 	\bibliography{main}
 	\bibliographystyle{plain}
