Add few sections. Upload new images. Add templates for tcolorbox (required libs: tikzfill listingsutf8)

--- a/src/main.tex
+++ b/src/main.tex
@@ -2,12 +2,17 @@
 %! Date = 1/27/25
 
 % Preamble
-\documentclass[11pt,openany]{book}
+\documentclass[11pt,openany]{report}
 
 % Packages
 \usepackage{amsmath}
 \usepackage{hyperref}
-\usepackage{tcolorbox}
+
+
+%\tcbuselibrary{listingsutf8}
+\usepackage[most]{tcolorbox}
+
+
 \usepackage{graphicx}
 \usepackage{float}
 %\usepackage{subfig}
