--- a/src/russia/01_chapter.tex
+++ b/src/russia/01_chapter.tex
@@ -2,8 +2,23 @@
 %! Date = 1/27/25
 
 
-\chapter{Introduction}\label{ch:ru_introduction}
-Hello, World!
+
+\newtcolorbox{joke}[1][]{colback=blue!10!white,
+    colframe=blue!80!black,fonttitle=\bfseries,
+    colbacktitle=blue!85!black,enhanced,
+    attach boxed title to top center={yshift=-2mm},
+    title={Giggle Corner}
+}
+
+\newtcolorbox{note}[1][]{colback=yellow!10,
+    colframe=yellow!80!black,
+    fonttitle=\bfseries,enhanced,
+    title={Note}
+}
+
+
+
+
 
 
 \chapter{BIT Application}\label{ch:ru_application}
@@ -14,11 +29,16 @@ you need to sign up for an exchange program on
 Go to the website \url{https://apply.isc.bit.edu.cn/apply/},
 register and click on \textit{Start Application}.
 
-\begin{tcolorbox}[colback=yellow!10, colframe=yellow!80!black, title=Note]
+\begin{note}
     Google is banned in China.
     We recommend to use Yandex or University email
     for registration and other purposes.
-\end{tcolorbox}
+\end{note}
+
+
+
+
+
 
 
 \section{Study Plan}\label{sec:study_plan}
@@ -66,6 +86,12 @@ Fig~\ref{fig:ru_study_plan}
 \end{figure}
 
 
+
+
+
+
+
+
 \section{Personal Information}\label{sec:ru_personal_info}
 
 This section not that hard, but some points should be clarified!
@@ -99,7 +125,14 @@ Fig~\ref{fig:ru_pers_info}
 \end{figure}
 
 
-\section{Passport}
+
+
+
+
+
+
+
+\section{Passport}\label{sec:ru_passport}
 
 In this section, you fill in your international passport details.
 
@@ -115,9 +148,17 @@ At the end of 2024, a Chinese visa can be obtained in the following places:
 \end{itemize}
 
 
-\begin{tcolorbox}[colback=yellow!10, colframe=yellow!80!black, title=Note]
+\begin{note}
     At the time of writing, a visa cannot be obtained in Kazan.
-\end{tcolorbox}
+    More information about visa you can find in \textbf{Section~\ref{...}}.
+\end{note}
+
+
+
+
+
+
+
 
 
 \section{Language Proficiency}
@@ -134,6 +175,12 @@ Issue date is printed on certificate Fig~\ref{fig:ru_lang_prof}.
     \caption{\centering Language Proficiency}
     \label{fig:ru_lang_prof}
 \end{figure}
+
+
+
+
+
+
 
 
 
@@ -159,6 +206,63 @@ For this moment, he is Petr Zhdanov Fig~\ref{fig:ru_recommender}.
 \end{figure}
 
 
-\section{}
 
 
+
+
+
+\section{Educational Background}\label{sec:ru_edu}
+
+This section not so important, if you're bachelor.
+Just specify your school.
+Below you can see example in Fig~\ref{fig:ru_edu_back}
+
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{russia/imgs/app_edu_back}
+    \caption{\centering Recommender}
+    \label{fig:ru_edu_back}
+\end{figure}
+
+
+
+
+
+
+
+\section{Family}\label{sec:ru_family}
+Here, specify two relatives (parents)
+with their contacts and place of work.
+
+
+\begin{joke}
+The Chinese Party prohibits specifying more than two relatives,
+because one family means one child.
+Otherwise, the Chinese Party will take away the
+cat-wife and a bowl of rice.
+\end{joke}
+
+
+
+
+
+\section{How to collect Admission Notice}\label{sec:ru_adm_not_delivery}
+
+It's the most crucial document you need for exchange program.
+Admission notice is enrolment document required to get \textit{Study Visa},
+go through border control in China, apply for a bank card and so on.
+
+If you have two options as shown in Fig~\ref{fig:ru_collect_adm_not},
+\textbf{it's better to choose deliver option}.
+In the end, Admission Notice will be sent by email.
+Highly likely this question doesn't affect on anything.
+However, better choose delivery option, to not screw up.
+
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{russia/imgs/app_adm_notice}
+    \caption{\centering Options to collect Admission Notice}
+    \label{fig:ru_collect_adm_not}
+\end{figure}
