Add several sections

--- a/src/russia/01_chapter.tex
+++ b/src/russia/01_chapter.tex
@@ -62,10 +62,9 @@ Fig~\ref{fig:ru_student_type}.
         \centering
         \includegraphics[width=\textwidth]{russia/imgs/app_2}
     \end{subfigure}
-    \caption{Positive samples of Canny Edge Algorithm}
+    \caption{Study Program}
     \label{fig:ru_student_type}
 \end{figure}
-
 
 
 After, you should specify the Department and Major.
@@ -135,6 +134,9 @@ Fig~\ref{fig:ru_pers_info}
 \section{Passport}\label{sec:ru_passport}
 
 In this section, you fill in your international passport details.
+You should get and submit your international passport before application deadline.
+Otherwise, write to Innopolis coordinator.
+As of 2024, it's Veronika Mezenova (@Nika\_Mezenova)
 
 Regarding field \textbf{Location of Visa Office}.
 At the end of 2024, a Chinese visa can be obtained in the following places:
@@ -215,13 +217,14 @@ For this moment, he is Petr Zhdanov Fig~\ref{fig:ru_recommender}.
 
 This section not so important, if you're bachelor.
 Just specify your school.
-Below you can see example in Fig~\ref{fig:ru_edu_back}
+Below you can see example in Fig~\ref{fig:ru_edu_back}.
+Probably not that many details are needed.
 
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=\textwidth]{russia/imgs/app_edu_back}
-    \caption{\centering Recommender}
+    \caption{\centering Educational Background}
     \label{fig:ru_edu_back}
 \end{figure}
 
@@ -247,6 +250,30 @@ cat-wife and a bowl of rice.
 
 
 
+\section{Financial Supporter and Guarantor}\label{sec:ru_fin_supp}
+Financial Supporter and Guarantor should be the same person.
+This is someone who will financially support you (does not have to live in China).
+Basically it's one of the parents.
+
+
+
+
+
+\section{Addresses}\label{sec:ru_addr}
+
+\begin{itemize}
+    \item \textbf{Permanent Address} - address in internal passport
+    \item \textbf{Current Postal Address} - Place of current residence.\\
+        Innopolis Dorms or Kazan if you live there.
+    \item Zip Code for Innopolis: 420500
+\end{itemize}
+
+
+
+
+
+
+
 \section{How to collect Admission Notice}\label{sec:ru_adm_not_delivery}
 
 It's the most crucial document you need for exchange program.
@@ -266,3 +293,30 @@ However, better choose delivery option, to not screw up.
     \caption{\centering Options to collect Admission Notice}
     \label{fig:ru_collect_adm_not}
 \end{figure}
+
+
+
+
+
+
+\section{Uploading Documents}\label{sec:ru_upload_docs}
+
+\begin{itemize}
+    \item \textbf{Passport} - PDF with main and visa pages
+
+    \item \textbf{Transcripts} - You should have it by this time.
+        Otherwise, get it via
+    \url{https://my.university.innopolis.ru/profile/edu-certs/create}{Innopolis website}
+
+    \item \textbf{Proof of Language Proficiency} - Results of English exam
+
+    \item \textbf{Recommendation Letter} - The same document if you pass inner-exam.
+    If you're master student, get it from your supervisor.
+
+    \item \textbf{Physical Examination Records} - See chapter~\ref{...}
+
+    \item \textbf{Non-Criminal Record} - Chinese guys will do it for you.
+
+    \item \textbf{Video} -
+
+\end{itemize}
