Done 1st version on Chapter 1

--- a/src/russia/01_chapter.tex
+++ b/src/russia/01_chapter.tex
@@ -152,7 +152,7 @@ At the end of 2024, a Chinese visa can be obtained in the following places:
 
 \begin{note}
     At the time of writing, a visa cannot be obtained in Kazan.
-    More information about visa you can find in \textbf{Section~\ref{...}}.
+    More information about visa you can find in \textbf{Chapter~\ref{...}}.
 \end{note}
 
 
@@ -306,17 +306,14 @@ However, better choose delivery option, to not screw up.
 
     \item \textbf{Transcripts} - You should have it by this time.
         Otherwise, get it via
-    \url{https://my.university.innopolis.ru/profile/edu-certs/create}{Innopolis website}
+    \href{https://my.university.innopolis.ru/profile/edu-certs/create}{Innopolis website}.
 
-    \item \textbf{Proof of Language Proficiency} - Results of English exam
+    \item \textbf{Proof of Language Proficiency} - Results of English exam.
 
     \item \textbf{Recommendation Letter} - The same document if you pass inner-exam.
     If you're master student, get it from your supervisor.
 
-    \item \textbf{Physical Examination Records} - See chapter~\ref{...}
+    \item \textbf{Physical Examination Records} - See chapter~\ref{...}.
 
     \item \textbf{Non-Criminal Record} - Chinese guys will do it for you.
-
-    \item \textbf{Video} -
-
 \end{itemize}
