Start Chapter-2 - Medical Examination

--- a/src/main.tex
+++ b/src/main.tex
@@ -26,6 +26,7 @@
 
 	\part[Russia]{Russia}\label{part:ru}
 	\input{russia/01_chapter}
+	\input{russia/02_chapter}
 
 	\part[China]{China}\label{part:cn}
 	\input{china/01_chapter}
