--- a/src/main.tex
+++ b/src/main.tex
@@ -7,14 +7,26 @@
 % Packages
 \usepackage{amsmath}
 \usepackage{hyperref}
-
-
 \usepackage[most]{tcolorbox}
-
-
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{subcaption}
+
+
+\newtcolorbox{joke}[1][]{colback=blue!10!white,
+    colframe=blue!80!black,fonttitle=\bfseries,
+    colbacktitle=blue!85!black,enhanced,
+    attach boxed title to top center={yshift=-2mm},
+    title={Giggle Corner}
+}
+
+\newtcolorbox{note}[1][]{colback=yellow!10,
+    colframe=yellow!80!black,
+    fonttitle=\bfseries,enhanced,
+    title={Note}
+}
+
+
 
 % Document
 \begin{document}
