Resolved the conflicts

--- a/src/main.tex
+++ b/src/main.tex
@@ -80,8 +80,8 @@ text width=4em,
 	\tableofcontents
 
 	\part[Russia]{Russia}\label{part:ru}
-	\input{russia/01_chapter}
-	\input{russia/02_chapter}
+	\input{01_russia/01_chapter}
+	\input{01_russia/02_chapter}
 
 	\part[China]{China}\label{part:cn}
 	\input{02_china/01_arrival}
