Added: Chapters 3-4. Fix: Images in first two sections

--- a/src/01_russia/01_bit_application.tex
+++ b/src/01_russia/01_bit_application.tex
@@ -9,7 +9,7 @@
 After you were qualified for the exchange program,
 you need to sign up for an exchange program on
 \href{https://apply.isc.bit.edu.cn/apply/}{the BIT website}.
-Go to the website \url{https://apply.isc.bit.edu.cn/apply/},
+Go to the website,
 register and click on \textit{Start Application}.
 
 \begin{note}
@@ -38,12 +38,12 @@ Fig~\ref{fig:ru_student_type}.
     \centering
     \begin{subfigure}[c]{0.49\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{russia/imgs/app_1}
+        \includegraphics[width=\textwidth]{01_russia/imgs/app_1}
     \end{subfigure}
     \hfill
     \begin{subfigure}[c]{0.49\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{russia/imgs/app_2}
+        \includegraphics[width=\textwidth]{01_russia/imgs/app_2}
     \end{subfigure}
     \caption{Study Program}
     \label{fig:ru_student_type}
@@ -62,7 +62,7 @@ Fig~\ref{fig:ru_study_plan}
 
 \begin{figure}[htpb]
     \centering
-    \includegraphics[width=\textwidth]{russia/imgs/app_3_study_plan}
+    \includegraphics[width=\textwidth]{01_russia/imgs/app_3_study_plan}
     \caption{\centering Study Plans}
     \label{fig:ru_study_plan}
 \end{figure}
@@ -101,7 +101,7 @@ Fig~\ref{fig:ru_pers_info}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{russia/imgs/app_4_personal_info}
+    \includegraphics[width=\textwidth]{01_russia/imgs/app_4_personal_info}
     \caption{\centering Personal Information}
     \label{fig:ru_pers_info}
 \end{figure}
@@ -135,7 +135,6 @@ At the end of 2024, a Chinese visa can be obtained in the following places:
 
 \begin{note}
     At the time of writing, a visa cannot be obtained in Kazan.
-    More information about visa you can find in \textbf{Chapter~\ref{...}}.
 \end{note}
 
 
@@ -156,7 +155,7 @@ Issue date is printed on certificate Fig~\ref{fig:ru_lang_prof}.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{russia/imgs/app_5_language}
+    \includegraphics[width=\textwidth]{01_russia/imgs/app_5_language}
     \caption{\centering Language Proficiency}
     \label{fig:ru_lang_prof}
 \end{figure}
@@ -185,7 +184,7 @@ For this moment, he is Petr Zhdanov Fig~\ref{fig:ru_recommender}.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{russia/imgs/app_6_recommender}
+    \includegraphics[width=\textwidth]{01_russia/imgs/app_6_recommender}
     \caption{\centering Recommender}
     \label{fig:ru_recommender}
 \end{figure}
@@ -206,7 +205,7 @@ Probably not that many details are needed.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{russia/imgs/app_edu_back}
+    \includegraphics[width=\textwidth]{01_russia/imgs/app_edu_back}
     \caption{\centering Educational Background}
     \label{fig:ru_edu_back}
 \end{figure}
@@ -272,7 +271,7 @@ However, better choose delivery option, to not screw up.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{russia/imgs/app_adm_notice}
+    \includegraphics[width=\textwidth]{01_russia/imgs/app_adm_notice}
     \caption{\centering Options to collect Admission Notice}
     \label{fig:ru_collect_adm_not}
 \end{figure}
